--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
-<header></header>
+<div class="app-container">
+  <app-header></app-header>
 
-<main>
-  <router-outlet></router-outlet>
-</main>
+  <main class="main-content">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+</div>
