--- a/src/app/components/dashboard/header/header.html
+++ b/src/app/components/dashboard/header/header.html
@@ -1,7 +1,8 @@
 <nav class="header">
   <a href="#" class="header__brand">
-    <mat-icon class="header__brand-icon">network_intel_node</mat-icon>
+    <mat-icon matListItemIcon>ssid_chart</mat-icon>
 
+    <mat-icon matListItemIcon>pie_chart</mat-icon>
     <span>Plataforma de Análisis de Sentimientos para E-commerce.</span>
   </a>
 </nav>
